--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fluencelabs/aqua": "^0.7.4-338",
     "@fluencelabs/aqua-lib": "^0.5.2",
     "@fluencelabs/fluence": "^0.23.4",
+    "@livepeer/react": "^2.4.3",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.5.0",
@@ -59,7 +60,7 @@
     "react-dropzone": "^14.2.3",
     "react-ga": "^3.2.0",
     "react-icons": "^3.11.0",
-    "react-masonry-component": "^6.2.1",
+    "react-masonry-component": "^6.3.0",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
