--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fluencelabs/aqua": "^0.7.4-338",
     "@fluencelabs/aqua-lib": "^0.5.2",
     "@fluencelabs/fluence": "^0.23.4",
+    "@huddle01/huddle01-client": "^0.0.10",
+    "@lighthouse-web3/sdk": "^0.2.3",
     "@livepeer/react": "^2.4.3",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
